--- a/papagaio.ipynb
+++ b/papagaio.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Hello, world!')"
+    "Introdução:"
+    "Introdução:"
+    "Introdução:"
    ]
   }
  ],
@@ -24,3 +26,4 @@
  "nbformat": 4,
  "nbformat_minor": 5
 }
+
