--- a/papagaio.ipynb
+++ b/papagaio.ipynb
@@ -6,9 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Introdução:"
-    "Introdução:"
-    "Introdução:"
+    "Introdução:
+Desenvolvimento:
+Conclusão
+"
    ]
   }
  ],
@@ -26,4 +27,5 @@
  "nbformat": 4,
  "nbformat_minor": 5
 }
+
 
