--- a/papagaio.ipynb
+++ b/papagaio.ipynb
@@ -6,10 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Introdução:
-Desenvolvimento:
-Conclusão
-"
+    "Introdução:"
    ]
   }
  ],
