--- a/papagaio.ipynb
+++ b/papagaio.ipynb
@@ -1,18 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": 20,
-      "id": "e2d30a05",
-      "metadata": {
-        "id": "e2d30a05"
-      },
-      "outputs": [],
-      "source": [
-        "#Introdução:"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "id": "44349d29",
       "metadata": {
@@ -25,8 +13,43 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Introdução\n",
+        "\n",
+        "O cerrado brasileiro possui uma grande diversidade de aves. Algumas delas apresentam um desenvolvimento cerebral maior que outras, como é o caso das aves da família Psittacidae. Diversas aves dessa família são conhecidas como papagaios, araras e periquitos.bEssas aves possuem inteligência superior em comparação às demais, sendo capazes de imitar diferentes sons. Caracterizam-se por um bico alto e curvo, com a parte superior maior que a inferior, além de apresentarem plumagens muito coloridas. Embora sejam bastante bonitas, podem ser difíceis de diferenciar a olho nu por pessoas que não possuem certas especializações. Com o objetivo de facilitar esse processo, a presente rede convolucional tem como finalidade analisar e identificar a espécie da ave a partir de uma imagem.\n",
+        "\n",
+        "Para isso, será criada e treinada uma rede convolucional utilizando um conjunto de dados com mais de 3.000 imagens, obtidas a partir do site iNaturalist. O dataset possui diferentes quantidades de imagens para cada espécie e, a fim de equilibrar as classes, serão adicionadas novas imagens, além da aplicação de técnicas de data augmentation.\n",
+        "\n",
+        "As especies a serem utilizadas no treinamento serão:\n",
+        "\n",
+        "*   Amazona aestiva\n",
+        "*   Amazona amazonica\n",
+        "*   Anodorhynchus hyacinthinus\n",
+        "*   Ara ararauna\n",
+        "*   Ara chloropterus\n",
+        "*   Ara macao\n",
+        "*   Brotogeris chiriri\n",
+        "*   Diopsittaca nobilis\n",
+        "*   Eupsittula aurea\n",
+        "*   Forpus xanthopterygius\n",
+        "*   Orthopsittaca manilatus\n",
+        "*   Primolius maracana\n",
+        "*   Psittacara leucophthalmus\n",
+        "*   Touit melanonotus\n",
+        "\n",
+        "Uma rede convolucional funciona a partir de três camadas principais: a camada convolucional, a camada de agrupamento e a camada totalmente conectada. A camada convolucional tem como objetivo dividir a imagem em regiões e aplicar filtros a partir de pesos aprendidos. A camada de agrupamento aplica um filtro sem pesos de treinamento na entrada, a fim de reduzir a quantidade de informações, mantendo apenas as mais relevantes. Por fim, a camada totalmente conectada realiza a classificação e retorna ao usuário a informação final.\n",
+        "\n",
+        "A fim de comparar a rede criada, também será realizado o transfer learning a partir de uma arquitetura já consolidada, seguido do fine-tuning. Dessa forma, o resultado final compreenderá três redes convolucionais. A arquitetura utilizada para criar a rede convolucional será a ResNet50; para o transfer learning será empregada a ResNet; e, para o fine-tuning, será aplicada a técnica XXXX."
+      ],
+      "metadata": {
+        "id": "e2REoNLFAven"
+      },
+      "id": "e2REoNLFAven"
+    },
+    {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "id": "d1dcf396",
       "metadata": {
         "id": "d1dcf396"
@@ -60,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "50265f17",
       "metadata": {
         "id": "50265f17",
@@ -133,7 +156,7 @@
         "id": "Aj1QAse-4ja3"
       },
       "id": "Aj1QAse-4ja3",
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -160,7 +183,7 @@
         }
       },
       "id": "g1KUnenF3kmr",
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -199,7 +222,7 @@
         }
       },
       "id": "nSnlLqAW6Ois",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -272,7 +295,7 @@
         }
       },
       "id": "7PGlG98D6gJK",
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
