add: Trabalhos Relacionados - Tang (2025)

--- a/papagaio.ipynb
+++ b/papagaio.ipynb
@@ -96,6 +96,16 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "Tang (2025) trás uma comparação entre diferentes redes convolucionais para a detecção de aves. Em seu trabalho são utilizados mais de 80.000 imagens de 525 espécies diferentes para o treinamento de três tipos de redes: a ResNet, MobileNet e VGG. Cada CNN foi comparada com suas diversas redes, variando o número de camadas convolucionais. Como resultado, Tang (2025) concluiu que a família da rede ResNet e MobileNet são as melhores para a classificação, tendo a ResNet uma qualidade progressiva de acordo com o número de camadas. A família da rede VGG apresentou dificuldade, principalmente com aves que possuíam características semelhantes. A família MobileNet trouxe resultados interessantes quando levando em consideração a eficiência computacional."
+      ],
+      "metadata": {
+        "id": "TNO8AxEkF9Za"
+      },
+      "id": "TNO8AxEkF9Za"
+    },
+    {
+      "cell_type": "markdown",
       "id": "mNe7hXgRH_Nd",
       "metadata": {
         "id": "mNe7hXgRH_Nd"
@@ -118,7 +128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "d1dcf396",
       "metadata": {
         "id": "d1dcf396"
@@ -160,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "50265f17",
       "metadata": {
         "colab": {
@@ -867,7 +877,7 @@
         "collapsed": true
       },
       "id": "-GU1rJX2t0c6",
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5257,7 +5267,7 @@
         "id": "gv6GBz3mV0wB"
       },
       "id": "gv6GBz3mV0wB",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5314,7 +5324,7 @@
         }
       },
       "id": "HYL1h2vsVjnB",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9885,7 +9895,7 @@
         }
       },
       "id": "TqyoVfhytHZs",
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9943,7 +9953,7 @@
         }
       },
       "id": "7-G09elgvk0T",
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10364,7 +10374,7 @@
         }
       },
       "id": "rVB44ouWTkK3",
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10409,6 +10419,26 @@
       "source": [
         "# 9. Referências"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "TANG, Jiayi. Comparative analysis of CNN architectures for bird species classification. ITM Web of Conferences, [S. l.], v. 78, p. 02019, 2025. DOI: 10.1051/itmconf/20257802019."
+      ],
+      "metadata": {
+        "id": "4lu43YmsGAn5"
+      },
+      "id": "4lu43YmsGAn5"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2EQxS3qmGMBQ"
+      },
+      "id": "2EQxS3qmGMBQ",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
