add: Correção de estrutura

--- a/papagaio.ipynb
+++ b/papagaio.ipynb
@@ -2,13 +2,21 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "source": [
+        "# 1. Autores"
+      ],
+      "metadata": {
+        "id": "uIDTVZhVFfBR"
+      },
+      "id": "uIDTVZhVFfBR"
+    },
+    {
+      "cell_type": "markdown",
       "id": "9mCjg2b-Iq8S",
       "metadata": {
         "id": "9mCjg2b-Iq8S"
       },
       "source": [
-        "# 1. Autores\n",
-        "\n",
         "<div style=\"display: flex; justify-content: center;\">\n",
         "  <table style=\"margin: auto; border-spacing: 60px;\">\n",
         "    <tr>\n",
@@ -51,13 +59,21 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# 4. Introdução"
+      ],
+      "metadata": {
+        "id": "T_MHvmt6FmrP"
+      },
+      "id": "T_MHvmt6FmrP"
+    },
+    {
+      "cell_type": "markdown",
       "id": "e2REoNLFAven",
       "metadata": {
         "id": "e2REoNLFAven"
       },
       "source": [
-        "# 4. Introdução\n",
-        "\n",
         "O cerrado brasileiro possui uma grande diversidade de aves. Algumas delas apresentam um desenvolvimento cerebral maior que outras, como é o caso das aves da família Psittacidae. Diversas aves dessa família são conhecidas como papagaios, araras e periquitos.bEssas aves possuem inteligência superior em comparação às demais, sendo capazes de imitar diferentes sons. Caracterizam-se por um bico alto e curvo, com a parte superior maior que a inferior, além de apresentarem plumagens muito coloridas. Embora sejam bastante bonitas, podem ser difíceis de diferenciar a olho nu por pessoas que não possuem certas especializações. Com o objetivo de facilitar esse processo, a presente rede convolucional tem como finalidade analisar e identificar a espécie da ave a partir de uma imagem.\n",
         "\n",
         "Para isso, será criada e treinada uma rede convolucional utilizando um conjunto de dados com mais de 3.000 imagens, obtidas a partir do site iNaturalist. O dataset possui diferentes quantidades de imagens para cada espécie e, a fim de equilibrar as classes, serão adicionadas novas imagens, além da aplicação de técnicas de data augmentation.\n",
@@ -967,7 +983,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Trenamento"
+        "## 6.4 Trenamento"
       ],
       "metadata": {
         "id": "3K-IyYmWV2O4"
@@ -975,11 +991,20 @@
       "id": "3K-IyYmWV2O4"
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 6.4.1 Imports"
+      ],
+      "metadata": {
+        "id": "787PKNILGegW"
+      },
+      "id": "787PKNILGegW"
+    },
+    {
       "cell_type": "code",
       "source": [
         "import os\n",
         "os.environ[\"KERAS_BACKEND\"] = \"torch\"\n",
-        "\n",
         "import keras\n",
         "from keras.models import Sequential\n",
         "from keras import datasets, layers, models\n",
@@ -989,7 +1014,10 @@
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
-        "import seaborn as sns\n"
+        "import seaborn as sns\n",
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.utils import image_dataset_from_directory, to_categorical\n",
+        "from tensorflow.keras import models, layers\n"
       ],
       "metadata": {
         "id": "gv6GBz3mV0wB"
@@ -997,6 +1025,16 @@
       "id": "gv6GBz3mV0wB",
       "execution_count": 15,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 6.4.2 Divisão de Datasets em train e Test"
+      ],
+      "metadata": {
+        "id": "vP2wtGc6Gltf"
+      },
+      "id": "vP2wtGc6Gltf"
     },
     {
       "cell_type": "code",
@@ -1102,13 +1140,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 6.4.3 Aplicação de rotulos"
+      ],
+      "metadata": {
+        "id": "G2hscSzOGyD_"
+      },
+      "id": "G2hscSzOGyD_"
+    },
+    {
       "cell_type": "code",
       "source": [
-        "import tensorflow as tf\n",
-        "from tensorflow.keras.utils import image_dataset_from_directory\n",
-        "import numpy as np\n",
-        "import os\n",
-        "import matplotlib.pyplot as plt\n",
         "\n",
         "# 1. Definição dos parâmetros e caminhos\n",
         "# ---\n",
@@ -1259,11 +1302,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 6.4.5 Imagem de treino"
+      ],
+      "metadata": {
+        "id": "qt7Cz9jKG7um"
+      },
+      "id": "qt7Cz9jKG7um"
+    },
+    {
       "cell_type": "code",
       "source": [
-        "import matplotlib.pyplot as plt\n",
-        "import numpy as np\n",
-        "\n",
         "# Certifique-se de que 'class_names', 'train_images' e 'train_labels'\n",
         "# foram definidos na célula anterior.\n",
         "\n",
@@ -1312,10 +1362,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 6.4.6 Definição da gpu"
+      ],
+      "metadata": {
+        "id": "PeFHUAaeHJoI"
+      },
+      "id": "PeFHUAaeHJoI"
+    },
+    {
       "cell_type": "code",
       "source": [
-        "import tensorflow as tf\n",
-        "\n",
         "# Lista todos os dispositivos disponíveis (CPU e GPU)\n",
         "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
         "\n",
@@ -1372,13 +1430,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 6.4.5 Camadas Convolucionais"
+      ],
+      "metadata": {
+        "id": "p2qSW3YmHPo_"
+      },
+      "id": "p2qSW3YmHPo_"
+    },
+    {
       "cell_type": "code",
       "source": [
-        "import tensorflow as tf\n",
-        "from tensorflow.keras.utils import to_categorical\n",
-        "from tensorflow.keras import models, layers\n",
-        "import numpy as np\n",
-        "\n",
         "# --- As variáveis train_images, train_labels, test_images, test_labels e class_names\n",
         "# --- DEVEM ter sido carregadas e convertidas em arrays NumPy na primeira célula de código.\n",
         "\n",
@@ -1718,6 +1781,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 6.4.5 Plots"
+      ],
+      "metadata": {
+        "id": "7fL7zlZvHXle"
+      },
+      "id": "7fL7zlZvHXle"
+    },
+    {
       "cell_type": "code",
       "source": [
         "plt.figure(figsize=[6,4])\n",
@@ -1762,121 +1835,24 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 7. Transfer learning\n",
+        "## 6.5 Transfer learning"
+      ],
+      "metadata": {
+        "id": "QTg2n8lFGRRW"
+      },
+      "id": "QTg2n8lFGRRW"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
         "\n",
         "A técnica de transfer learning visa reestruturar a última camada da CNN. O objetivo é utilizar uma rede já criada e treinada como ponto de partida para a resolução de um problema. Para isso, uma rede de detecção de animais será utilizada, com várias espécies de animais, totalizando XXX possíveis saídas. Após isso, a última camada dessa rede será removida e treinada para a detecção apenas do desejado. A técnica de transfer learning é muito útil para datasets maiores já treinados, uma vez que somente a última camada precisa ser refeita."
       ],
       "metadata": {
-        "id": "5LhGg36chElQ"
+        "id": "U15anDOYF73-"
       },
-      "id": "5LhGg36chElQ"
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# ==========================================\n",
-        "# TRANSFER LEARNING COM RESNET50\n",
-        "# Dataset separado em pastas: train / test\n",
-        "# ==========================================\n",
-        "\n",
-        "import tensorflow as tf\n",
-        "from tensorflow.keras.applications import ResNet50\n",
-        "from tensorflow.keras.models import Sequential\n",
-        "from tensorflow.keras.layers import Dense, GlobalAveragePooling2D\n",
-        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
-        "\n",
-        "# Caminhos do dataset\n",
-        "train_dir = \"/content/datasets/train_images\"\n",
-        "test_dir  = \"/content/datasets/test_images\"\n",
-        "\n",
-        "# ================================\n",
-        "# 1. Geradores de dados\n",
-        "# ================================\n",
-        "train_datagen = ImageDataGenerator(rescale=1./255)\n",
-        "test_datagen  = ImageDataGenerator(rescale=1./255)\n",
-        "\n",
-        "train_gen = train_datagen.flow_from_directory(\n",
-        "    train_dir,\n",
-        "    target_size=(224, 224),\n",
-        "    batch_size=32,\n",
-        "    class_mode='categorical',\n",
-        "    shuffle=True\n",
-        ")\n",
-        "\n",
-        "test_gen = test_datagen.flow_from_directory(\n",
-        "    test_dir,\n",
-        "    target_size=(224, 224),\n",
-        "    batch_size=32,\n",
-        "    class_mode='categorical',\n",
-        "    shuffle=False\n",
-        ")\n",
-        "\n",
-        "# ================================\n",
-        "# 2. Modelo base ResNet50\n",
-        "# ================================\n",
-        "base_model = ResNet50(weights='imagenet', include_top=False, input_shape=(224, 224, 3))\n",
-        "\n",
-        "# Congela as camadas da base (não treina elas)\n",
-        "for layer in base_model.layers:\n",
-        "    layer.trainable = False\n",
-        "\n",
-        "# Número de classes detectadas automaticamente\n",
-        "num_classes = len(train_gen.class_indices)\n",
-        "\n",
-        "# Cria o modelo final\n",
-        "model = Sequential([\n",
-        "    base_model,\n",
-        "    GlobalAveragePooling2D(),\n",
-        "    Dense(128, activation='relu'),\n",
-        "    Dense(num_classes, activation='softmax')\n",
-        "])\n",
-        "\n",
-        "# ================================\n",
-        "# 3. Compilação e treino\n",
-        "# ================================\n",
-        "model.compile(optimizer='adam',\n",
-        "              loss='categorical_crossentropy',\n",
-        "              metrics=['accuracy'])\n",
-        "\n",
-        "history = model.fit(\n",
-        "    train_gen,\n",
-        "    validation_data=test_gen,\n",
-        "    epochs=10\n",
-        ")\n",
-        "\n",
-        "# ================================\n",
-        "# 4. Avaliação e salvamento\n",
-        "# ================================\n",
-        "loss, acc = model.evaluate(test_gen)\n",
-        "print(f\"\\n✅ Acurácia final no conjunto de teste: {acc*100:.2f}%\")\n",
-        "\n",
-        "# Mostra classes detectadas\n",
-        "print(\"\\nClasses detectadas:\", list(train_gen.class_indices.keys()))\n",
-        "\n",
-        "# Salva o modelo\n",
-        "model.save(\"/content/modelo_resnet50_transfer.h5\")\n",
-        "print(\"\\n💾 Modelo salvo em /content/modelo_resnet50_transfer.h5\")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Gyr8ySZNiEMg",
-        "outputId": "d0bf9278-ca47-4579-a7db-3197413b082f"
-      },
-      "id": "Gyr8ySZNiEMg",
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Found 840 images belonging to 14 classes.\n",
-            "Found 840 images belonging to 14 classes.\n",
-            "Epoch 1/10\n"
-          ]
-        }
-      ]
+      "id": "U15anDOYF73-"
     },
     {
       "cell_type": "markdown",
@@ -1909,6 +1885,14 @@
       "source": [
         "# 8. Conclusão"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "vydmq1hVFvg_"
+      },
+      "id": "vydmq1hVFvg_"
     },
     {
       "cell_type": "markdown",
