add: Textos explicativos

--- a/papagaio.ipynb
+++ b/papagaio.ipynb
@@ -993,6 +993,19 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Neste tópico será abordado o treinamento de uma rede convolucional criada. Para isso, o dataset será dividido em treinamento e teste, bem como a classificação das imagens por meio dos nomes das aves — será utilizado o nome científico.\n",
+        "\n",
+        "A construção da rede será feita em quatro blocos, sendo o último o classificador. A rede será feita utilizando a ResNet50.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "vMVq85tmJuI-"
+      },
+      "id": "vMVq85tmJuI-"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### 6.4.1 Imports"
       ],
       "metadata": {
@@ -1024,6 +1037,16 @@
       },
       "id": "gv6GBz3mV0wB",
       "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ZQSYQSkuLTmX"
+      },
+      "id": "ZQSYQSkuLTmX",
+      "execution_count": null,
       "outputs": []
     },
     {
