--- a/papagaio.ipynb
+++ b/papagaio.ipynb
@@ -132,6 +132,16 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "Este trabalho está dividido em três partes de criação. A primeira será a criação de uma rede convolucional do zero. A segunda será a utilização da técnica de transfer learning, em que uma rede já treinada será utilizada como base para o treinamento de outra rede. A última será a técnica de fine-tuning, em que a rede utilizada no transfer learning será atualizada para melhor combinação com o requisito."
+      ],
+      "metadata": {
+        "id": "ZOMuMZrGaVzn"
+      },
+      "id": "ZOMuMZrGaVzn"
+    },
+    {
+      "cell_type": "markdown",
       "id": "44349d29",
       "metadata": {
         "id": "44349d29"
@@ -257,6 +267,16 @@
       "source": [
         "## 6.3 Exploração de dados"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Neste ponto, a separação, classificação e data augmentation serão feitas."
+      ],
+      "metadata": {
+        "id": "TdKHyVqHbP8r"
+      },
+      "id": "TdKHyVqHbP8r"
     },
     {
       "cell_type": "markdown",
@@ -1029,7 +1049,10 @@
         "import seaborn as sns\n",
         "import tensorflow as tf\n",
         "from tensorflow.keras.utils import image_dataset_from_directory\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "from tensorflow.keras.utils import to_categorical\n",
+        "from tensorflow.keras import models, layers, regularizers ### ALTERAÇÃO ###\n",
+        "from tensorflow.keras.callbacks import ModelCheckpoint, EarlyStopping, ReduceLROnPlateau\n"
       ],
       "metadata": {
         "id": "gv6GBz3mV0wB"
@@ -1442,16 +1465,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "rTlucIWoRkDV"
-      },
-      "id": "rTlucIWoRkDV",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "### 6.4.5 Camadas Convolucionais"
@@ -1464,12 +1477,7 @@
     {
       "cell_type": "code",
       "source": [
-        "\"\"\"import tensorflow as tf\n",
-        "from tensorflow.keras.utils import to_categorical\n",
-        "from tensorflow.keras import models, layers, regularizers ### ALTERAÇÃO ###\n",
-        "from tensorflow.keras.callbacks import ModelCheckpoint, EarlyStopping, ReduceLROnPlateau\n",
-        "import numpy as np\n",
-        "\n",
+        "\"\"\"\n",
         "# ==============================================================================\n",
         "# CONFIGURAÇÕES E HIPERPARÂMETROS\n",
         "# ==============================================================================\n",
@@ -2004,9 +2012,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "\n",
-        "\n",
-        "A técnica de transfer learning visa reestruturar a última camada da CNN. O objetivo é utilizar uma rede já criada e treinada como ponto de partida para a resolução de um problema. Para isso, uma rede de detecção de animais será utilizada, com várias espécies de animais, totalizando XXX possíveis saídas. Após isso, a última camada dessa rede será removida e treinada para a detecção apenas do desejado. A técnica de transfer learning é muito útil para datasets maiores já treinados, uma vez que somente a última camada precisa ser refeita."
+        "A técnica de transfer learning consiste em aproveitar uma rede neural convolucional (CNN) previamente treinada, como a ResNet50 treinada no conjunto de dados ImageNet, para resolver um novo problema. Para isso, normalmente substitui-se a última camada da rede por uma nova, adaptada ao número de classes do novo conjunto de dados, e realiza-se o treinamento apenas dessa camada (ou de algumas adicionais, se necessário). Essa abordagem é especialmente útil quando o novo dataset é pequeno ou semelhante ao original, pois permite reduzir o tempo de treinamento e melhorar a precisão do modelo."
       ],
       "metadata": {
         "id": "U15anDOYF73-"
@@ -2257,12 +2263,22 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 6.6 Fine-Tunning"
+        "## 6.6 Fine-Tuning"
       ],
       "metadata": {
         "id": "D_K9T2ewSzjQ"
       },
       "id": "D_K9T2ewSzjQ"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A técnica de fine-tuning é uma etapa avançada do transfer learning que visa aprimorar o desempenho do modelo ajustando parcialmente os pesos de uma rede pré-treinada. Diferentemente do método de extração de características, no qual apenas a última camada é treinada, o fine-tuning realiza o treinamento de múltiplas camadas, ajustando os ganhos e vieses para melhor adaptação ao novo conjunto de dados. Nesse processo, aplicam-se estratégias como o uso de diferentes taxas de aprendizado para o corpo da rede e para a camada de saída, além do congelamento e posterior descongelamento de camadas. No presente trabalho, utilizou-se a rede ResNet50 como base para a aplicação dessa técnica."
+      ],
+      "metadata": {
+        "id": "4oYXyn6Scbsj"
+      },
+      "id": "4oYXyn6Scbsj"
     },
     {
       "cell_type": "markdown",
@@ -2641,6 +2657,21 @@
       "id": "0LpNqrQZTWCg",
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Os resultados obtidos para os tres modelos forma.\n",
+        "\n",
+        "*   Rede Criada:\n",
+        "*   Transfer Learning:\n",
+        "*   Fine-Tuning:\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "sXznSQCDeSzV"
+      },
+      "id": "sXznSQCDeSzV"
     },
     {
       "cell_type": "markdown",
