--- a/papagaio.ipynb
+++ b/papagaio.ipynb
@@ -2659,13 +2659,23 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "A7KxBDsRjytN"
+      },
+      "id": "A7KxBDsRjytN",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "Os resultados obtidos para os tres modelos forma.\n",
+        "A acurácia de validação obtida para os três modelos foi:\n",
         "\n",
-        "*   Rede Criada:\n",
-        "*   Transfer Learning:\n",
-        "*   Fine-Tuning:\n",
+        "* Rede criada: 0.8864\n",
+        "* Transfer Learning: 0.998243\n",
+        "* Fine-Tuning: 0.996779\n",
         "\n"
       ],
       "metadata": {
@@ -2685,7 +2695,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Conclui-se que, durante os três treinamentos, o com pior resultado é a rede criada. Isso se dá por causa do número limitado de imagens utilizadas. O treinamento das redes utilizando o ResNet50 como base obteve um melhor resultado, porque a rede já havia sido treinada com mais imagens, o que gera mais precisão na detecção dos elementos da imagem. O Fine-Tuning obteve o melhor resultado, pois, além do treinamento do classificador para obter os resultados esperados, a rede como um todo foi ajustada para a detecção das classes desejadas."
+      ],
       "metadata": {
         "id": "vydmq1hVFvg_"
       },
