add: alteração texto

--- a/papagaio.ipynb
+++ b/papagaio.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "322f5ac2-41bd-4d1c-b5c0-0dd50439e99e",
+   "metadata": {},
+   "source": [
+    "# Classificação de Espécies de Psitacídeos do Cerrado: Uma Análise Comparativa com Redes Convolucionais, Transfer Learning e Fine-Tuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "uIDTVZhVFfBR",
    "metadata": {
     "id": "uIDTVZhVFfBR"
@@ -79,20 +87,20 @@
     "\n",
     "As 14 espécies consideradas neste estudo são:\n",
     "\n",
-    "- Amazona aestiva (Papagaio-verdadeiro)\n",
-    "- Amazona amazonica (Curica)\n",
-    "- Anodorhynchus hyacinthinus (Arara-azul)\n",
-    "- Ara ararauna (Arara-canindé)\n",
-    "- Ara chloropterus (Arara-vermelha)\n",
-    "- Ara macao (Araracanga)\n",
-    "- Brotogeris chiriri (Periquito-de-encontro-amarelo)\n",
-    "- Diopsittaca nobilis (Maracanã-pequena)\n",
-    "- Eupsittula aurea (Periquito-rei)\n",
-    "- Forpus xanthopterygius (Tuim)\n",
-    "- Orthopsittaca manilatus (Maracanã-do-buriti)\n",
-    "- Primolius maracana (Maracanã)\n",
-    "- Psittacara leucophthalmus (Periquitão)\n",
-    "- Touit melanonotus (Apuim-de-costas-pretas)\n",
+    "- **Amazona aestiva (Papagaio-verdadeiro)**\n",
+    "- **Amazona amazonica (Curica)**\n",
+    "- **Anodorhynchus hyacinthinus (Arara-azul)**\n",
+    "- **Ara ararauna (Arara-canindé)**\n",
+    "- **Ara chloropterus (Arara-vermelha)**\n",
+    "- **Ara macao (Araracanga)**\n",
+    "- **Brotogeris chiriri (Periquito-de-encontro-amarelo)**\n",
+    "- **Diopsittaca nobilis (Maracanã-pequena)**\n",
+    "- **Eupsittula aurea (Periquito-rei)**\n",
+    "- **Forpus xanthopterygius (Tuim)**\n",
+    "- **Orthopsittaca manilatus (Maracanã-do-buriti)**\n",
+    "- **Primolius maracana (Maracanã)**\n",
+    "- **Psittacara leucophthalmus (Periquitão)**\n",
+    "- **Touit melanonotus (Apuim-de-costas-pretas)**\n",
     "\n",
     "A abordagem metodológica deste estudo foi estruturada em três estratégias experimentais distintas, visando uma análise comparativa de desempenho. A primeira abordagem consistirá no desenvolvimento de uma Rede Neural Convolucional (CNN) a partir do zero. A segunda estratégia empregará a técnica de Aprendizado por Transferência (Transfer Learning), na qual um modelo pré-treinado será utilizado como um extrator de características fixo. Por fim, a terceira abordagem utilizará a técnica de Fine-Tuning (ajuste fino), que estende o aprendizado por transferência ao reajustar sutilmente os pesos do modelo pré-treinado. O desempenho de cada uma dessas três abordagens será rigorosamente avaliado e comparado utilizando um conjunto abrangente de métricas, incluindo Acurácia, Precisão, Recall, F1-Score e a Matriz de Confusão."
    ]
